--- a/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
+++ b/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
@@ -270,13 +270,13 @@
     "Now the interior angle spanned by $\\partial T$ as seen by $\\xi$ can be written as:\n",
     "\n",
     "\\begin{equation}\n",
-    "a = \\sum_{i=1}^3 \\sigma(p_i) \\left. \\tan^{-1} \\frac{s}{\\sqrt{p_i^2+h^2}} \\right|_{a_i}^{b_i}\n",
+    "a = \\sum_{i=1}^3 \\sigma(p_i) \\left. -\\tan^{-1} \\frac{s}{\\sqrt{p_i^2+h^2}} \\right|_{a_i}^{b_i}\n",
     "\\end{equation}\n",
     "\n",
     "The [addition theorem](https://en.wikipedia.org/wiki/Inverse_trigonometric_functions#Arctangent_addition_formula) for $\\tan^{-1}$ applied to this situtation allows to combine corresponding terms from $\\sum_i I_{n,i}$ and $S_n$:\n",
     "\n",
     "\\begin{equation}\n",
-    "-\\tan^{-1} \\frac{s}{p_i} + \\tan^{-1} \\frac{|h|s}{p\\sqrt{s^2+p_i^2+h^2}} = \\tan^{-1} \\frac{ps}{(p_i^2 + h^2)^2 + |h| \\sqrt{s^2+p_i^2+h^2}}\n",
+    "-\\tan^{-1} \\frac{s}{p_i} + \\tan^{-1} \\frac{|h|s}{p\\sqrt{s^2+p_i^2+h^2}} = -\\tan^{-1} \\frac{ps}{(p_i^2 + h^2)^2 + |h| \\sqrt{s^2+p_i^2+h^2}}\n",
     "\\end{equation}\n",
     "\n",
     "Finally, noting that\n",
