consolidated computation for even and odd. Expanded testing.

--- a/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
+++ b/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
@@ -7,7 +7,8 @@
     "\\newcommand{\\vt}[1]{\\boldsymbol{#1}}\n",
     "\\newcommand{\\uv}[1]{\\hat{\\boldsymbol{#1}}}\n",
     "\\newcommand{\\tv}[1]{\\tilde{\\boldsymbol{#1}}}\n",
-    "\\newcommand{\\dvg}{\\operatorname{div}}"
+    "\\newcommand{\\dvg}{\\operatorname{div}}\n",
+    "\\newcommand{\\grd}{\\operatorname{grad}}"
    ]
   },
   {
@@ -19,6 +20,7 @@
     "\\renewcommand{\\uv}[1]{\\hat{\\boldsymbol{#1}}}\n",
     "\\renewcommand{\\tv}[1]{\\tilde{\\boldsymbol{#1}}}\n",
     "\\renewcommand{\\dvg}{\\operatorname{div}}\n",
+    "\\renewcommand{\\grd}{\\operatorname{grad}}\n",
     "$$"
    ]
   },
@@ -26,7 +28,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Integration of powers of $R$ on triangles following Wilton [1]\n",
+    "# Integration of $R^n$ on triangles\n",
     "\n",
     "We are interested in the computation of\n",
     "\n",
@@ -43,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Following Wilton, we start with writing the integrand as the surface divergence of a radially symmetric vector function. Assume\n",
+    "Following Wilton[1], we start with writing the integrand as the surface divergence of a radially symmetric vector function. Assume\n",
     "\n",
     "\\begin{equation}\n",
     "R^n = \\dvg \\left( F(P;h) \\vt{P} \\right)\n",
@@ -194,14 +196,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "For n = 0 the integral becomes\n",
+    "\n",
+    "\\begin{align}\n",
+    "I_0 =& \\frac{1}{2} p \\int_a^b \\frac{s^2+p^2+h^2}{s^2+p^2} ds \\\\\n",
+    "=& \\frac{1}{2} p \\left( s + \\frac{h^2}{p} \\tan^{-1} \\frac{s}{p} \\right)\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "In the case $n > 0$ the integrals can be computed by recursion.\n",
     "\n",
     "\\begin{align}\n",
     "I_n =& \\frac{p}{n+2} \\int \\frac{(s^2+p^2+h^2)^{\\frac{n+2}{2}}}{s^2+p^2} ds \\\\\n",
     "=& \\frac{p}{n+2} \\int \\frac{(s^2+p^2+h^2)^{n/2}\\left(s^2+p^2+h^2\\right)}{s^2+p^2} ds \\\\\n",
     "=& \\frac{p}{n+2} \\left( \\int \\left( s^2+p^2+h^2 \\right)^{n/2} ds + h^2 \\frac{n}{p} I_{n-2}\\right) \\\\\n",
-    "=& \\frac{p}{n+2} \\left( p^2+h^2 \\right)^{\\frac{n+1}{2}} \\int \\left( t^2 + 1 \\right)^{n/2} dt + h^2 \\frac{n}{n+2} I_{n-2}, \\quad t = \\frac{s}{\\sqrt{p^2+h^2}} \\\\\n",
-    "=& \\frac{p}{n+2} \\left( p^2+h^2 \\right)^{\\frac{n+1}{2}} J_n\\left( \\frac{s}{\\sqrt{p^2+h^2}} \\right) + h^2 \\frac{n}{n+2} I_{n-2}\n",
+    "=& \\frac{p}{n+2} J_n(s) + h^2 \\frac{n}{n+2} I_{n-2} \\\\\n",
     "\\end{align}"
    ]
   },
@@ -209,31 +222,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The first term can in turn be computed by recursion ($J_n$ is **not** the Bessel function!):\n",
+    "The first term can be computed by recursion. Consider the sequence of integrals:\n",
     "\n",
     "\\begin{align}\n",
-    "J_n =& \\int \\left( t^2 + 1 \\right)^{n/2} dt \\\\\n",
+    "L_n =& \\int \\left( t^2 + 1 \\right)^{n/2} dt \\\\\n",
     "=& \\int \\cosh^{n+1} (\\alpha) d\\alpha \\quad \\mbox{where } t = \\sinh \\alpha \\\\\n",
     "=& \\cosh^n \\alpha \\sinh \\alpha - n \\int \\cosh^{n-1} \\alpha \\sinh^2 \\alpha \\\\\n",
     "=& \\left(1 + t^2\\right)^{\\frac{n}{2}} t - n \\int \\cosh^{n-1} \\alpha (\\cosh^2 \\alpha - 1) \\\\\n",
-    "=& \\left(1 + t^2\\right)^{\\frac{n}{2}} t - n \\left( J_n - J_{n-2} \\right)\n",
-    "\\end{align}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "=& \\left(1 + t^2\\right)^{\\frac{n}{2}} t - n \\left( L_n - L_{n-2} \\right)\n",
+    "\\end{align}\n",
+    "\n",
     "From which\n",
     "\n",
     "\\begin{equation}\n",
-    "J_n = \\frac{1}{n+1} \\left( \\left(1 + t^2\\right)^{\\frac{n}{2}} t + n J_{n-2} \\right)\n",
+    "L_n = \\frac{1}{n+1} \\left( \\left(1 + t^2\\right)^{\\frac{n}{2}} t + n J_{n-2} \\right)\n",
     "\\end{equation}\n",
     "\n",
     "The recursion is bootstrapped from\n",
     "\n",
     "\\begin{equation}\n",
-    "J_{-1} = \\log \\left( t + \\sqrt{1 + t^2} \\right)\n",
+    "L_{-1} = \\log \\left( t + \\sqrt{1 + t^2} \\right)\n",
     "\\end{equation}"
    ]
   },
@@ -241,7 +249,40 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For $n = -1$ this integral becomes\n",
+    "\\begin{align}\n",
+    "J_{n}(s) =& \\int \\left( s^2 + p^2 + h^2 \\right)^{\\frac{n}{2}} ds \\\\\n",
+    "=& \\left( p^2 + h^2 \\right)^{\\frac{n+1}{2}} \\int (t^2+1)^{n/2} dt, \\quad t = \\frac{s}{\\sqrt{p^2+h^2}} \\\\\n",
+    "=& \\left( p^2 + h^2 \\right)^{\\frac{n+1}{2}} L_n(t) \\\\\n",
+    "=& \\frac{1}{n+1} \\left( p^2 + h^2 \\right)^{\\frac{n+1}{2}} \\left( \\left(1 + t^2\\right)^{\\frac{n}{2}} t + n L_{n-2} \\right) \\\\\n",
+    "=& \\frac{1}{n+1} \\left( s \\left( s^2 + p^2 + h^2 \\right)^{\\frac{n}{2}} + n (p^2+h^2) J_{n-2}(s) \\right)\n",
+    "\\end{align}\n",
+    "\n",
+    "bootstrapped by\n",
+    "\n",
+    "\\begin{equation}\n",
+    "J_{-1}(s) = \\log \\left( s + \\sqrt{s^2 + p^2 + h^2} \\right)\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In the case where $p=0$ and $h=0$ we will use the limiting value\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\left. J_{-1}(s) \\right|_a^b = \\lim_{\\epsilon \\rightarrow 0} \\log \\left( \\frac{b+\\sqrt{b^2+\\epsilon^2}}{a + \\sqrt{a^2 +\\epsilon^2}} \\right) = \\left\\{ \\begin{array}{cl}\n",
+    "\\log \\left( \\frac{b}{a} \\right), & \\mbox{when } b > 0 \\\\\n",
+    "\\log \\left( \\frac{a}{b} \\right), & \\mbox{when } b < 0 \\\\\n",
+    "\\end{array} \\right.\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first recursion gives the integral for $n = -1$, i.e. one of the values computed in [1]:\n",
     "\n",
     "\\begin{align}\n",
     "I_{-1} =& p \\int_{a}^{b} \\frac{(s^2+p^2+h^2)^{1/2}}{s^2+p^2} ds \\\\\n",
@@ -264,19 +305,24 @@
     "\n",
     "\\begin{align}\n",
     "\\int \\frac{h}{R^3} =& - \\sum_{i=1}^3 \\left. \\tan^{-1} \\frac{hs}{p_i \\sqrt{s^2+p_i^2+h^2}} \\right|_{a_i}^{b_i} + \\alpha \\sigma(h) \\\\\n",
-    "=& - \\sigma(h) \\left( \\sum_{i=1}^3 \\left. \\tan^{-1} \\frac{|h|s}{p_i \\sqrt{s^2+p_i^2+h^2}} \\right|_{a_i}^{b_i} + \\alpha \\right) \\\\\n",
-    "\\end{align}\n",
-    "\n",
-    "Now the interior angle spanned by $\\partial T$ as seen by $\\xi$ can be written as:\n",
+    "=& - \\sigma(h) \\left( \\sum_{i=1}^3 \\left. \\tan^{-1} \\frac{|h|s}{p_i \\sqrt{s^2+p_i^2+h^2}} \\right|_{a_i}^{b_i} - \\alpha \\right) \\\\\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The interior angle spanned by $\\partial T$ as seen by $\\xi$ can be written as:\n",
     "\n",
     "\\begin{equation}\n",
-    "a = \\sum_{i=1}^3 \\sigma(p_i) \\left. -\\tan^{-1} \\frac{s}{\\sqrt{p_i^2+h^2}} \\right|_{a_i}^{b_i}\n",
+    "a = \\sum_{i=1}^3 \\left. \\tan^{-1} \\frac{s}{p_i} \\right|_{a_i}^{b_i}\n",
     "\\end{equation}\n",
     "\n",
     "The [addition theorem](https://en.wikipedia.org/wiki/Inverse_trigonometric_functions#Arctangent_addition_formula) for $\\tan^{-1}$ applied to this situtation allows to combine corresponding terms from $\\sum_i I_{n,i}$ and $S_n$:\n",
     "\n",
     "\\begin{equation}\n",
-    "-\\tan^{-1} \\frac{s}{p_i} + \\tan^{-1} \\frac{|h|s}{p\\sqrt{s^2+p_i^2+h^2}} = -\\tan^{-1} \\frac{ps}{(p_i^2 + h^2)^2 + |h| \\sqrt{s^2+p_i^2+h^2}}\n",
+    "\\tan^{-1} \\frac{s}{p_i} - \\tan^{-1} \\frac{|h|s}{p\\sqrt{s^2+p_i^2+h^2}} = \\tan^{-1} \\frac{ps}{(p_i^2 + h^2)^2 + |h| \\sqrt{s^2+p_i^2+h^2}}\n",
     "\\end{equation}\n",
     "\n",
     "Finally, noting that\n",
@@ -288,7 +334,7 @@
     "and comparing this with the second term in the recursion for $I_n$ ($n$ odd):\n",
     "\n",
     "\\begin{equation}\n",
-    "I_{n,i} = ... + h^2 \\frac{n}{n+2} I_{n+2,i}\n",
+    "I_{n,i} = ... + h^2 \\frac{n}{n+2} I_{n-2,i}\n",
     "\\end{equation}\n",
     "\n",
     "tells us that once the merging of the two contributions is done for $n=-3$, the recursion will generate the correct answers for all other powers of $R$."
@@ -298,14 +344,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Even powers of $R$\n",
+    "For $n = 0$ the situation is even better:\n",
     "\n",
-    "Because the potential is a polynomial in $P$ that tends to zero as $P \\rightarrow 0$, there is no singular contribution stemming from excising a small region around $\\xi$. This makes the computation significantly simpler.\n",
+    "\\begin{align}\n",
+    "I_{0} =& \\frac{1}{2} \\sum_{i=1}^{3} \\left( p_i \\left. s \\right|_{a_i}^{b_i} + h^2 \\left. \\tan^{-1} \\frac{s}{p} \\right|_{a_i}^{b_i} \\right) -\\frac{1}{2} h^2 \\alpha \\\\\n",
+    "=& \\frac{1}{2} \\sum_{i=1}^{3} p_i \\left. s \\right|_{a_i}^{b_i}\n",
+    "\\end{align}\n",
     "\n",
-    "For even powers $n = 2m$ the integral we need to compute is\n",
+    "Again because the second term in the recursion for $I_n$ and the recursion for the singularity contribution behave identically, the $\\tan^{-1}$ will cancel  in the computation of integrals of all powers of $R$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## The vector case\n",
+    "\n",
+    "In this section we will compute integrals of the form\n",
     "\n",
     "\\begin{equation}\n",
-    "I_{2m} = \\frac{p}{2m+2} \\int \\frac{ \\left( s^2 + p^2 + h^2 \\right)^{m+1} - h^{2m+2}}{s^2+p^2} ds\n",
+    "\\int \\frac{\\vt{y} - \\vt{\\xi}}{R^n} dy, \\quad n=-3,-1,0,1,2,...\n",
     "\\end{equation}"
    ]
   },
@@ -313,16 +371,70 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "which can be done by straightforward application of the binomial expansion\n",
+    "In this case we will look for scalar potentials such that their surfacic gradient is the above integrand:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{\\vt{y} - \\vt{\\xi}}{R^n} = \\grd_T F(P;h)\n",
+    "\\end{equation}\n",
+    "\n",
+    "or\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\frac{1}{P} F'(P;h) \\vt{P} = \\left( P^2 + h^2 \\right)^{n/2} \\vt{P}\n",
+    "\\end{equation}\n",
+    "\n",
+    "from which\n",
     "\n",
     "\\begin{align}\n",
-    "I_{2m} =& \\frac{p}{2m+2} \\int \\sum_{k=1}^{m+1} \\binom{m+1}{k} (s^2+p^2)^{k-1} h^{2(m+1-k)} ds \\\\\n",
-    "=& \\frac{p}{2m+2} \\sum_{k=1}^{m+1} \\binom{m+1}{k} h^{2(m+1-k)} \\int \\sum_{l=0}^{k-1} \\binom{k-1}{l} s^{2l} p^{2(k-1-l)} ds \\\\\n",
-    "=& \\frac{p}{2m+2} \\sum_{k=1}^{m+1} \\binom{m+1}{k} h^{2(m+1-k)} \\sum_{l=0}^{k-1} \\frac{1}{2l+1} \\binom{k-1}{l} p^{2(k-1-l)} s^{2l+1} \\\\\n",
-    "=& \\frac{p}{2m+2} \\sum_{k=1}^{m+1} \\binom{m+1}{k} h^{2(m+1-k)} C_k(p,s)\n",
+    "F(p) =& \\int \\left(P^2 + h^2 \\right)^{n/2} dP \\\\\n",
+    "=& \\frac{1}{2} \\int_{Q = P^2+h^2} Q^{n/2} dQ \\\\\n",
+    "=& \\frac{1}{n+2} \\left( P^2 + h^2 \\right)^{\\frac{n+2}{2}}.\n",
     "\\end{align}\n",
     "\n",
-    "Note that the inner summation does not depend on $m$ and can be reused among the computation of the different $I_{2m}$."
+    "So we conclude\n",
+    "\n",
+    "\\begin{equation}\n",
+    "R^{n} = \\grd_T \\left( \\frac{1}{n+2} \\left( P^2 + h^2 \\right)^{\\frac{n+2}{2}} \\right)\n",
+    "\\end{equation}\n",
+    "\n",
+    "The integral we are looking for thus can be written as\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\int_T \\frac{\\vt{y} - \\vt{\\xi}}{R^n} dy =& \\lim_{\\epsilon \\rightarrow 0} \\left( \\int_{\\partial T \\setminus B_{\\epsilon}} \\frac{\\uv{m}}{n+2} \\left( P^2 + h^2 \\right)^{\\frac{n+2}{2}} dy + \\int_{T \\cap C_{\\epsilon}} \\frac{\\uv{m}}{n+2} \\left( P^2 + h^2 \\right)^{\\frac{n+2}{2}} dy \\right)\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For $n \\geq -1$ the second term clearly disappears when $\\epsilon \\rightarrow 0$. Also when $n=-3$ and $h \\neq 0$ the singular contribution disappers. It is only the case where $n=-3$ and $h = 0$ that needs a more careful analysis of the second term. If $\\xi \\notin \\partial T$, the integral vanishes because contributions on opposite sides of $\\vt{\\xi}$ cancel. When $\\xi \\in \\partial T$ this is not necessarily the case. However, we can safely assume this case will never occur because in that case the integral $\\int_T (\\vt{y}-\\vt{\\xi}) R^{-3}$ diverges anyway.\n",
+    "\n",
+    "In conclusion either the integral diverges or the second term is zero. We can focus or efforts on the first term."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Like we did for the scalar case, the integral can be written as\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\int_T \\frac{\\vt{y} - \\vt{\\xi}}{R^n} dy = \\sum_{i=1}^{3} \\uv{m}_i \\left. K_n(s,p_i,h) \\right|_{a_i}^{b_i}\n",
+    "\\end{equation}\n",
+    "\n",
+    "with\n",
+    "\n",
+    "\\begin{equation}\n",
+    "K_n(s,p,h) = \\frac{1}{n+2} \\int_a^b \\left( s^2 + p^2 + h^2 \\right)^{\\frac{n+2}{2}} = \\frac{1}{n+2} \\left( p^2 + h^2 \\right)^{\\frac{n+3}{2}} J_{n+2}\\left( \\frac{s}{\\sqrt{p^2+h^2}} \\right)\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "which can be easily expressed in terms of quantities we already encountered in our previous caluclations. In other words computation of the vector integrals comes at almost no computational overhead."
    ]
   }
  ],
