vector case implemented and tested

--- a/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
+++ b/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
@@ -325,7 +325,7 @@
     "\\tan^{-1} \\frac{s}{p_i} - \\tan^{-1} \\frac{|h|s}{p\\sqrt{s^2+p_i^2+h^2}} = \\tan^{-1} \\frac{ps}{(p_i^2 + h^2)^2 + |h| \\sqrt{s^2+p_i^2+h^2}}\n",
     "\\end{equation}\n",
     "\n",
-    "Finally, noting that\n",
+    "Note that\n",
     "\n",
     "\\begin{equation}\n",
     "S_n = h^2 \\frac{n}{n+2} S_{n-2}\n",
@@ -337,7 +337,9 @@
     "I_{n,i} = ... + h^2 \\frac{n}{n+2} I_{n-2,i}\n",
     "\\end{equation}\n",
     "\n",
-    "tells us that once the merging of the two contributions is done for $n=-3$, the recursion will generate the correct answers for all other powers of $R$."
+    "tells us that once the merging of the two contributions is done for $n=-3$, the recursion will generate the correct answers for all other powers of $R$.\n",
+    "\n",
+    "Whenever $p=0$, the $\\tan^{-1}$ will be set to zero. Not only will this result in more efficient code in that case, it will also void division by zero when in addition also $h=0$."
    ]
   },
   {
@@ -426,7 +428,7 @@
     "with\n",
     "\n",
     "\\begin{equation}\n",
-    "K_n(s,p,h) = \\frac{1}{n+2} \\int_a^b \\left( s^2 + p^2 + h^2 \\right)^{\\frac{n+2}{2}} = \\frac{1}{n+2} \\left( p^2 + h^2 \\right)^{\\frac{n+3}{2}} J_{n+2}\\left( \\frac{s}{\\sqrt{p^2+h^2}} \\right)\n",
+    "K_n(s,p,h) = \\frac{1}{n+2} \\int_a^b \\left( s^2 + p^2 + h^2 \\right)^{\\frac{n+2}{2}} = \\frac{1}{n+2} J_{n+2}\\left(s,p,h\\right)\n",
     "\\end{equation}"
    ]
   },
