near exhaustive testing of contour construction. Updated notebook companion.

--- a/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
+++ b/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
@@ -447,13 +447,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We start from the alternative surfacic potential representation:\n",
+    "We start from the alternative surfacic potential representation for the kernel:\n",
     "\n",
     "\\begin{equation}\n",
-    "R^n = \\dvg \\left( \\frac{1}{(n+2) P^2} \\left( \\left( P^2 + h^2 \\right)^{m+1} - h^{2m+2} \\right) \\vt{P} \\right)\n",
+    "R^n = \\dvg \\left( \\frac{1}{(n+2) P^2} \\left( \\left( P^2 + h^2 \\right)^{\\frac{n+2}{2}} - \\left(h^2 \\right)^{\\frac{n+2}{2}} \\right) \\vt{P} \\right)\n",
     "\\end{equation}\n",
     "\n",
     "Note that the term we added has vanishing divergence and thus will not affect the value of the integral. The reason for this alternative potential is that it is regular at $P=0$ and so we do not have to keep track of the singularity term separately.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The boundary $\\partial D$ is made up from straight segments and arcs. Integration of the potential along the straight segments is dealt with as explained in the previous sections. For an arc $C$ the contribution to the integral looks like:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{align}\n",
+    "A_n =& \\frac{1}{n+2} \\int_{C} \\frac{\\left( P^2 + h^2 \\right)^{\\frac{n+2}{2}} - \\left( h^2 \\right)^{\\frac{n+2}{2}}}{P^2} \\uv{m} \\cdot \\vt{P} dy \\\\\n",
+    "=& \\frac{\\alpha}{n+2} \\left( \\left( p^2 + h^2 \\right)^{\\frac{n+2}{2}} - \\left(h^2\\right)^{\\frac{n+2}{2}} \\right)\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "where $\\alpha$ is the signed angle spanned by the arc (positive for arcs traversed in counterclockwise sense, negative otherwise). From this expression we get the following recursion:\n",
+    "\n",
+    "\\begin{equation}\n",
+    "A_n = \\frac{\\alpha}{n+2} \\left[ \\left( \\frac{n}{\\alpha} A_{n-2} + \\left( h^2 \\right)^{\\frac{n}{2}} \\right) \\left( p^2 + h^2 \\right) - \\left( h^2 \\right)^{\\frac{n+2}{2}} \\right]\n",
+    "\\end{equation}\n",
+    "\n",
+    "Bootstrapped by\n",
+    "\n",
+    "\\begin{align}\n",
+    "A_{-3} =& -\\alpha \\left( \\left( p^2 + h^2 \\right)^{-\\frac{1}{2}} - \\left( h^2 \\right)^{-\\frac{1}{2}} \\right) \\\\\n",
+    "A_{0} =& \\frac{\\alpha}{2} p^2\n",
+    "\\end{align}"
    ]
   }
  ],
