ported integration routines

--- a/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
+++ b/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
@@ -313,7 +313,7 @@
     "The [addition theorem](https://en.wikipedia.org/wiki/Inverse_trigonometric_functions#Arctangent_addition_formula) for $\\tan^{-1}$ applied to this situtation allows to combine corresponding terms from $\\sum_i I_{n,i}$ and $S_n$:\n",
     "\n",
     "\\begin{equation}\n",
-    "\\tan^{-1} \\frac{s}{p_i} - \\tan^{-1} \\frac{|h|s}{p\\sqrt{s^2+p_i^2+h^2}} = \\tan^{-1} \\frac{ps}{(p_i^2 + h^2)^2 + |h| \\sqrt{s^2+p_i^2+h^2}}\n",
+    "\\tan^{-1} \\frac{s}{p_i} - \\tan^{-1} \\frac{|h|s}{p_i \\sqrt{s^2+p_i^2+h^2}} = \\tan^{-1} \\frac{p_i s}{(p_i^2 + h^2) + |h| \\sqrt{s^2+p_i^2+h^2}}\n",
     "\\end{equation}\n",
     "\n",
     "Note that\n",
@@ -489,6 +489,20 @@
     "A_{-3} =& -\\alpha \\left( \\left( p^2 + h^2 \\right)^{-\\frac{1}{2}} - \\left( h^2 \\right)^{-\\frac{1}{2}} \\right) \\\\\n",
     "A_{0} =& \\frac{\\alpha}{2} p^2\n",
     "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For the vector case the contribution from a single arc reads\n",
+    "\n",
+    "\\begin{align}\n",
+    "B_n =& \\int_C \\uv{m} \\left( \\frac{1}{n+2} \\left( P^2 + h^2 \\right)^{\\frac{n+2}{2}} \\right) dy \\\\\n",
+    "=& \\frac{p}{n+2} \\left( p^2 + h^2 \\right)^{\\frac{n+2}{2}} \\int_{\\alpha_0}^{\\alpha_1} \\uv{m} d\\alpha\n",
+    "\\end{align}\n",
+    "\n",
+    "*Note*: In the vector case we need to be consistent in our choice for the potential $\\Phi$ since the quantity we integrate over is $\\uv{m} \\Phi$ which does not necessarily cancel at the inter-sector boundary. In contrast, for the scalar case, the quantity $\\uv{m} \\cdot (F(P) \\vt{P})$ vanishes along the inter-sector boundary and does $F(P)$ can be chosen freely in each sector."
    ]
   }
  ],
