integration over triangle/ring intersection tested vs dblquad

--- a/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
+++ b/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
@@ -36,7 +36,7 @@
     "\\int_T R^n dy,\n",
     "\\end{equation}\n",
     "\n",
-    "where $T$ is a triangle, $R=|x-y|$, and $n$ an integer larger or equal then $-1$. This package is based on [1] and papers building on this paper, notably [2,3].\n",
+    "where $T$ is a triangle, $R=|x-y|$, and $n = -3,-1,0,1,2,3,..$. This package is based on [1] and papers building on this paper, notably [2,3].\n",
     "\n",
     "[[1]](http://ieeexplore.ieee.org/xpls/abs_all.jsp?arnumber=1143304&tag=1) D. Wilton, S. Rao, A. Glisson, D. Schaubert, O. Al-Bundak, and C. Butler, “Potential integrals for uniform and linear source distributions on polygonal and polyhedral domains,” IEEE Transactions on Antennas and Propagation, vol. 32, no. 3, pp. 276–281, Mar. 1984.\n",
     "\n",
@@ -273,6 +273,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "*note*: The limit is only finite if $a$ and $b$ have the same sign. This is guaranteed because the singularity $\\vt{x}$ is not allowed to be on the boundary (even though it is allowed to be on the extension of these segments)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The first recursion gives the integral for $n = -1$, i.e. one of the values computed in [1]:\n",
     "\n",
     "\\begin{align}\n",
@@ -436,11 +443,15 @@
    "source": [
     "## Extension to Triangle/Disk intersections\n",
     "\n",
-    "In the Space-Time Galerkin discretisation of time domain retarded potential boundary integral equations, the computation of the following integrals is required:\n",
+    "In the Space-Time Galerkin discretisation of time domain retarded potential boundary integral equations, the computation of integrals over the following class of domains is required:\n",
     "\n",
     "\\begin{equation}\n",
     "D = T \\cap B(\\xi,Q)\n",
-    "\\end{equation}\n"
+    "\\end{equation}\n",
+    "\n",
+    "where $T$ is a triangle and $B(\\xi,Q)$ is the disk with centre $\\xi$ (assumed to lie in the plane supporting $T$) and radius $Q$.\n",
+    "\n",
+    "When given a triangle by its three vertices and a disk by its center and radius, the construction of a boundary representation of such a domain is nothing short of a nightmare, and will not be discussed in this document.\n"
    ]
   },
   {
@@ -499,10 +510,19 @@
     "\n",
     "\\begin{align}\n",
     "B_n =& \\int_C \\uv{m} \\left( \\frac{1}{n+2} \\left( P^2 + h^2 \\right)^{\\frac{n+2}{2}} \\right) dy \\\\\n",
-    "=& \\frac{p}{n+2} \\left( p^2 + h^2 \\right)^{\\frac{n+2}{2}} \\int_{\\alpha_0}^{\\alpha_1} \\uv{m} d\\alpha\n",
+    "=& \\frac{1}{n+2} \\left( p^2 + h^2 \\right)^{\\frac{n+2}{2}} \\int_C \\uv{m} dy\n",
     "\\end{align}\n",
     "\n",
-    "*Note*: In the vector case we need to be consistent in our choice for the potential $\\Phi$ since the quantity we integrate over is $\\uv{m} \\Phi$ which does not necessarily cancel at the inter-sector boundary. In contrast, for the scalar case, the quantity $\\uv{m} \\cdot (F(P) \\vt{P})$ vanishes along the inter-sector boundary and does $F(P)$ can be chosen freely in each sector."
+    "*Note*: In the vector case we need to be consistent in our choice for the potential $\\Phi$ since the quantity we integrate over is $\\uv{m} \\Phi$ which does not necessarily cancel at the inter-sector boundary. In contrast, for the scalar case, the quantity $\\uv{m} \\cdot (F(P) \\vt{P})$ vanishes along the inter-sector boundary and does $F(P)$ can be chosen freely in each sector. So if we would leave out the second term in the surfacic potential, we would have to do so also in the computation of the segment contributions, forcing us to consider what happens in the neighborhood of $\\xi$. For certain configurations of $D$ this point might not even be in the integration domain. The resulting algorithm becomes inelegant and prone to numerical and logical errors."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "*Note*: for contributions of arcs and circles we can assume that $p \\neq 0$. This ensures for example that no divisions by zero occur in the computation of $h A_{-3}$\n",
+    "\n",
+    "*Note* In the case of a full circle $\\alpha = \\pm 2\\pi$, $B_n$ vanishes."
    ]
   }
  ],
