cleanup of tests. Reference vals stored in jld files.

--- a/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
+++ b/docs/notebooks/Wilton_integrals_up_to_arbitrary_degree.ipynb
@@ -146,10 +146,10 @@
     "Let us now focus on a single term:\n",
     "\n",
     "\\begin{equation}\n",
-    "I_n = \\frac{p}{n+2} \\int_{a}^{b} \\frac{(s^2+r^2)^{\\frac{n+2}{2}}}{s^2+p^2} ds\n",
+    "I_n = \\frac{p}{n+2} \\int_{a}^{b} \\frac{(s^2+p^2+h^2)^{\\frac{n+2}{2}}}{s^2+p^2} ds\n",
     "\\end{equation}\n",
     "\n",
-    "where indices $i$ where omitted and the shorthand $r^2 = p^2 + h^2$ was introduced."
+    "where indices $i$ where omitted."
    ]
   },
   {
@@ -174,9 +174,7 @@
     "\\int \\frac{ab}{\\left( s^2 + a^2 \\right) \\sqrt{s^2 + a^2 + b^2}} = \\tan^{-1} \\frac{bs}{a \\sqrt{s^2 + a^2 + b^2}}\n",
     "\\end{equation}\n",
     "\n",
-    "See e.g. [Wolfram Alpha](https://www.wolframalpha.com/input/?i=diff%28atan%28b*s%2F%28a*sqrt%28s%5E2%2Ba%5E2%2Bb%5E2%29%29%29,s%29).\n",
-    "\n",
-    "**Note**: In the case where $p = 0$, $I_{-3}$ disappears."
+    "See e.g. [Wolfram Alpha](https://www.wolframalpha.com/input/?i=diff%28atan%28b*s%2F%28a*sqrt%28s%5E2%2Ba%5E2%2Bb%5E2%29%29%29,s%29).\n"
    ]
   },
   {
@@ -293,7 +291,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Corner cases and numerical instability\n",
+    "### Combining the contour and singularity contributions\n",
     "\n",
     "For small $p$, the argument of $\\tan^{-1}$ becomes very large. Moreover, the contributions stemming from the integral over $\\partial T$ and those stemming from the region around $\\xi$ cancel in the final computation of $\\sum_i I_{n,i} + S_n$.\n",
     "\n",
